minor fix: alignment cards

--- a/css/web.css
+++ b/css/web.css
@@ -276,6 +276,15 @@ section#container-purple {
     box-shadow: 0 -5px 8px -3px rgba(0,0,0,0.1); 
 }
 
+h2.cards-title{
+    /* border:grey 1px solid; */
+    color: #FDF6F0;
+    display: block;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+}
+
 div.cards-container {
     /* border:1px solid purple; */
     width: 100%;
@@ -286,21 +295,12 @@ div.cards-container {
     flex-wrap: wrap;
     margin-bottom: 160px;
     gap: 25px;
-    justify-content: space-around;
-}
-
-h2.cards-title{
-    /* border:grey 1px solid; */
-    color: #FDF6F0;
-    display: block;
-    justify-content: center;
-    align-content: center;
-    text-align: center;
+    justify-content: space-evenly;
 }
 
 article.card-one {
     /* border:1px solid gray;  */
-    flex:1 1 200px;
+    flex:1 1 auto;
     background-color: #FDF6F0;
     border-radius: 50px;
     display:flex;
@@ -337,7 +337,7 @@ article.card-one h3{
 
 article.card-two {
     /* border:1px solid gray; DEBUG ONLY */
-    flex:1 1 200px;
+    flex:1 1 auto;
     background-color: #FDF6F0;
     border-radius: 50px;
     display:flex;
@@ -377,7 +377,7 @@ article.card-two h3{
 
 article.card-three {
     /* border:1px solid gray;  */
-    flex:1 1 200px;
+    flex:1 1 auto;
     background-color: #FDF6F0;
     border-radius: 50px;
     display:flex;
